src/test/ui/type-alias-enum-variants/enum-variant-generic-args.stderr
error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:7:25
   |
LL |         Self::TSVariant(());
   |                         ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:9:27
   |
LL |         Self::TSVariant::<()>(());
   |                           ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:11:16
   |
LL |         Self::<()>::TSVariant(());
   |                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:11:31
   |
LL |         Self::<()>::TSVariant(());
   |                               ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:14:16
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:14:33
   |
LL |         Self::<()>::TSVariant::<()>(());
   |                                 ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:20:29
   |
LL |         Self::SVariant { v: () };
   |                             ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:22:26
   |
LL |         Self::SVariant::<()> { v: () };
   |                          ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:22:35
   |
LL |         Self::SVariant::<()> { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:25:16
   |
LL |         Self::<()>::SVariant { v: () };
   |                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:25:35
   |
LL |         Self::<()>::SVariant { v: () };
   |                                   ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:28:16
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:28:32
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                ^^ type argument not allowed

error[E0308]: mismatched types
  --> $DIR/enum-variant-generic-args.rs:28:41
   |
LL |         Self::<()>::SVariant::<()> { v: () };
   |                                         ^^ expected type parameter, found ()
   |
   = note: expected type `T`
              found type `()`

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:38:29
   |
LL |     Enum::<()>::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:41:24
   |
LL |     Alias::TSVariant::<()>(());
   |                        ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:43:30
   |
LL |     Alias::<()>::TSVariant::<()>(());
   |                              ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:46:29
   |
LL |     AliasFixed::TSVariant::<()>(());
   |                             ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:48:18
   |
LL |     AliasFixed::<()>::TSVariant(());
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:50:18
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:50:35
   |
LL |     AliasFixed::<()>::TSVariant::<()>(());
   |                                   ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:56:28
   |
LL |     Enum::<()>::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:59:23
   |
LL |     Alias::SVariant::<()> { v: () };
   |                       ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:61:29
   |
LL |     Alias::<()>::SVariant::<()> { v: () };
   |                             ^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:64:28
   |
LL |     AliasFixed::SVariant::<()> { v: () };
   |                            ^^ type argument not allowed

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:66:18
   |
LL |     AliasFixed::<()>::SVariant { v: () };
   |                  ^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/enum-variant-generic-args.rs:68:18
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                  ^^ unexpected type argument

error[E0109]: type arguments are not allowed for this type
  --> $DIR/enum-variant-generic-args.rs:68:34
   |
LL |     AliasFixed::<()>::SVariant::<()> { v: () };
   |                                  ^^ type argument not allowed

error: aborting due to 28 previous errors

Some errors have detailed explanations: E0107, E0109, E0308.
For more information about an error, try `rustc --explain E0107`.
